# volt-api

./: .gitignore  COMMANDS.md  LICENSE  README.md  SECURITY.md  TODO.md  app.go  buildmode_dev.go  buildmode_prod.go  go.mod  main.go  prod.env.json  wails.json
.github/workflows/: build-secure.yml  build.yml
docs/: CODE_SIGNING.md  CODE_SIGNING_FREE.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  style.css
frontend/src/components/: AboutDialog.tsx  AppLogo.tsx  AssertionResults.tsx  AssertionsEditor.tsx  AuthEditor.tsx  ChainVariableExtractor.tsx  ClientSettings.tsx  CollectionsSidebar.tsx  EnvironmentManager.tsx  EnvironmentSelector.tsx  ErrorBoundary.tsx  HistorySidebar.tsx  Icons.tsx  KeyValueEditor.tsx  MethodDropdown.tsx  RequestSection.tsx  RequestTabs.tsx  ResizablePanel.tsx  ResponseSection.tsx  SaveRequestModal.tsx  Sidebar.tsx  ThemeToggle.tsx  TitleBar.tsx
frontend/src/hooks/: useGlobalShortcuts.ts  useTheme.ts
frontend/src/test/: setup.ts
frontend/src/utils/: assertions.test.ts  assertions.ts  chainVariables.ts  helpers.test.ts  helpers.ts  tabs.ts  wasm.ts
frontend/src/wasm/: package.json  volt_wasm.d.ts  volt_wasm.js  volt_wasm_bg.wasm  volt_wasm_bg.wasm.d.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/app/: App.d.ts  App.js
frontend/wasm-core/volt-wasm/: Cargo.toml
frontend/wasm-core/volt-wasm/src/: lib.rs
internal/app/: app.go  app_test.go  types.go
internal/database/: compression_test.go  database.go
(+2 files in other folders)
